RESOLVED FIXED71964
WebProcess doesn't use AuthBrokerAgent for proxy credentials
https://bugs.webkit.org/show_bug.cgi?id=71964
Summary WebProcess doesn't use AuthBrokerAgent for proxy credentials
Alexey Proskuryakov
Reported 2011-11-09 16:10:52 PST
In Lion, CFNetwork has an agent that provides access to proxy credentials. WebKit doesn't need to participate in retrieving or storing proxy credentials. The symptom of not using AuthBrokerAgent is that a number of confusing dialogs and sheets appear once you configure a proxy. There can be an AuthBrokerAgent dialog for system services like MobileMe or for Safari itself (as it downloads safe browsing database), Safari sheets for requests coming from WebKit, and Keychain dialogs asking whether Safari can access keychain items created by System Preferences or by AuthBrokerAgent. <rdar://problem/10423024>
Attachments
proposed patch (5.29 KB, patch)
2011-11-09 16:18 PST, Alexey Proskuryakov
no flags
Alexey Proskuryakov
Comment 1 2011-11-09 16:18:53 PST
Created attachment 114389 [details] proposed patch
WebKit Review Bot
Comment 2 2011-11-09 18:48:56 PST
Comment on attachment 114389 [details] proposed patch Clearing flags on attachment: 114389 Committed r99800: <http://trac.webkit.org/changeset/99800>
WebKit Review Bot
Comment 3 2011-11-09 18:49:00 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.