<rdar://problem/10423024> WebProcess doesn't use AuthBrokerAgent for proxy credentials https://bugs.webkit.org/show_bug.cgi?id=71964

Reviewed by Darin Adler.

Source/WebCore:

* platform/network/cf/ResourceHandleCFNet.cpp: (WebCore::ResourceHandle::didReceiveAuthenticationChallenge):
* platform/network/mac/ResourceHandleMac.mm: (WebCore::ResourceHandle::didReceiveAuthenticationChallenge):
Don't ask the client for proxy credentials. CFNetwork results are authoritative, and proxy
credentials are system-wide.

Source/WebKit2:

* WebProcess/com.apple.WebProcess.sb: Allow mach-lookup of com.apple.cfnetwork.AuthBrokerAgent.


Canonical link: https://commits.webkit.org/88363@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99800 268f45cc-cd09-0410-ab3c-d52691b4dbfc